Improve stability of HTTP requests handling
This commit improves the handling of HTTP requests made
by the container build service by:
- using a HttpClient singleton object to retrive remote
  layer object, in place of URL.openStream() client
- add retry logic for the following server response codes:
  429,502,503,504
- use virtual threads executors for all http client requests

Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>